...
            "state" : "translated",
            "value" : "همه انجام شد"
          }
        }
      }
    },
    "All done for today!" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "همه‌ی کارهای امروز انجام شد!"
          }
...
            "state" : "translated",
            "value" : "تقویم"
          }
        }
      }
    },
    "Call mom" : {
      "extractionState" : "manual",
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تماس با مامان"
...
